--- a/collyde-summit-2015.html
+++ b/collyde-summit-2015.html
@@ -1,18 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0059)http://www.loveexpressonline.com/newsaroundthetristate.html -->
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>News Around the Tri-State</title>
+<title>Collyde Summit 2015</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" --><style type="text/css">
-<!--
-.style1 {font-weight: bold}
--->
-</style><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -60,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">news</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -80,17 +75,20 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">News Around the Tri-State</h4>
-  <div id="authorname"></div>
-  <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun,  July 15th-19th, 7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth Delive&shy;rance COJCA</strong>, 10-13 18th Avenue, Newark,&#8200;New  Jersey 07106. Host: <strong>Dr. Beverley  Williams, Pastor</strong>. For more info call (732) 939-7556 or (973) 371-2120.    </p>
-    <p align="center" class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavorful  Crew </strong>presents <strong>Gospel &amp; Jazz</strong> with <strong>Brunch, July 11th, 2pm-6pm @ Sa&shy;lem United  Methodist Community Center</strong>, 211 West 129th Street (bet. 7th &amp; 8th Aves.),  NY, NY. Tickets: $35. Contacts: James Hall (917) 701-3005 Delores Franks (212)  862-1038 or Email us at flavorfulcrew@yahoo.com    </p>
-    <p align="center" class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s  Memorial </strong>will  celebrate Birthday Service for <strong>Overseer  Clara Williams; </strong>special guest speaker, <strong>Sunday,  July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street,  Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa"><strong><a name="a4"></a>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing  Preachers International Conference, July 28th-August 2nd</strong> hosted by <strong>Pastor Sabrina McKenzie</strong>, Director of Dancing Preachers Int&rsquo;l.  Speakers: <strong>Apostle Elizabeth Hairston</strong>, <strong>Rev. Cordelia Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue: Radisson  Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436. Facilitators:Dr.  Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter, Prophetess Marla King,  Wendell Bullen, Patricia Smargiassi, Martin Smargiassi, Dr. A&rsquo;renee Cooper,  Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes, Julinda Lewis,  Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright. Register now at  www.dancingpreachers. com or call 1-877-716-7117.</p></div></div><!-- InstanceEndEditable --> 
+            <div><img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="784" class="full-width-image" id="authorpic" /> </div>
+            <h4 id="articleTitle">Collyde Summit 2015</h4>
+            <h4 class="qa">Featuring Shane &amp; Shane and Matt Hammitt of Sanctus Real<br>
+            </h4>
+              <div id="authorname">Shane &amp; Shane and Matt Hammitt.</div>
+              
+              <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in the NJ, NY and PA area, who love Jesus and are convicted to become  world changers. Collyde Summit is quickly becoming the premier two day  conference for believers and leaders alike, of the north-east. What sets  Collyde Summit apart is the combination of amazing worship, practical and  relevant break-out sessions and inspiring and Spirt-led speakers. A great bonus  is the opportunity to meet like-minded believers, pastors and leaders from this  north-east area.</p>
+              <p>Collyde  Summit 2015 will feature an uplifting worship experience for all sessions with  hit contemporary artists, Shane and Shane, a special Friday evening concert  with Lead singer of Sanctus Real, Matt Hammitt. Some of the keynote speakers  this year are Pastor Todd Wagner, Pete Wilson, Brandi Wilson, Bethany Hoang,  Terry Smith, Will Mancini, Jenni Catron, Romanita Hairton and many more. The  four Tracks are Leadership, Justice, Life &amp; Community and Worship &amp;  Creative Arts. There will be 30 or more global organizations like International  Justice Mission, World Vision, Compassion and many others.</p>
+              <p>This  year&rsquo;s theme is MORE - derived from Ephesians 3:20: &ldquo;Now to Him Who is able to  do immeasurably more than we can ask or imagine, according to His power that is  at work within us...&rdquo; According to the foun&shy;der of Collyde, Jinu Thomas, &ldquo;More  is about experiencing a breakthrough in your life and finding the courage you  need to move forward in spite of your doubts, questions, and fears. MORE is  about believing that God can show up at any time, any place, any moment and  that He has not forgotten you or the dreams He has given you. MORE is an act of  surrender, re-dedication and about believing God beyond your circumstances or  how you feel. MORE is about moving forward. More is about pressing-in. MORE is  about stepping out &amp; activating your faith. Join us as we talk about you,  your dreams, your calling, your life, your relationships, your fears, your  ministry, your next season and about believing God to do exceeding abundantly  much MORE than you can ask or think or imagine.&rdquo;</p>
+              <p><strong><em>Are you  believing God for MORE? Then don&rsquo;t miss this inspiring, transformational and  impactful local conference. Register today at www.collydesummit.com The Love  Express readers can get an additional 20% off by using the special Code:  TLECS15. Limited Seats available with code. Register today!</em></strong></p>
+<p ></p>
+              </div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
