--- a/edithstranges-editorial.html
+++ b/edithstranges-editorial.html
@@ -3,7 +3,7 @@
 <html><!-- InstanceBegin template="/Templates/lovexcss2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>June Editorial</title>
+<title>Editorial: Loving One! - Edith Strianges</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -87,22 +87,21 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="articlepic"></div>
             
 <div id="articlepic">
-  <img src="authors/strangesafter.jpg" width="200" alt="Edith Stranges"></div>            <h4>Editorial: </h4>
-<div id="authorname">Edith Stranges</div>
+  <img src="authors/strangesafter.jpg" width="200" alt="Edith Stranges"></div>            <h4>Editorial: Loving One!</h4>
+<div id="authorname"> Editor &amp; Publisher: Edith Stranges</div>
 
-<p>This will be a great summer. Truly the harvest is  ripe and the chur&shy;ches are ready for the overflow. God is looking for a new generation, a new breed of people who are  totally sold out to the eternal purpo&shy;ses of the Kingdom of God.</p>
-<p>Scan the pages of this month&rsquo;s paper and  you will see countless churches, ministries and businesses who have the  foresight to think and plan ahead. These people pray and envision what God puts  in their spirit and <strong>The Love Express</strong> allows that vision to be made known. As you  scan the pa&shy;ges of The Love Express, write down the events that you and your  group need to get involved with and see God&rsquo;s kingdom extending in the earth.  It doesn&rsquo;t matter what size your church is; you may have 20, 50, 200 or even  larger. We all need to love and appreciate each one.</p>
-<p>June is the  month we honor men, fathers that have natural children, church fathers, mentors  and men in general. God has a unique place for men and that is to be close to  His Heart. My father Henry Acker Sr. and David my husband who has a lot of  qualities that my father had and much more. So I honor all the men in my life, my brother, ne&shy;phews, bro&shy;ther-in-law, spiritual advisors and the list goes on.</p>
-<p>This September  will be the beginning of 31 years of printing <strong>The Love Express</strong>; 31 years with Jesus. A statement came to me years  ago and it is so true.</p>
-<p><strong>&ldquo;This is exactly what we&rsquo;ve needed; a  newspaper that has the pulse of the tri-state area, a newspaper tha is not of  any specific color or creed, a newspaper that is not geared to one  denomination. The Love Express is unlike any news- paper you have ever read. It  is a reflection of the Body of Christ here on earth.&rdquo;</strong></p>
-<p>I am truly  thankful to God that He chose a wo&shy;man of no education, but she knew how to  pray.</p>
-<p>A pioneer who  goes into uncharted territory to pave the way for others by building bridges of  hope, roads and other spiritual constructions. A pioneer&rsquo;s journey is not ea&shy;sy,  but the rewards are awesome. So keep dreaming. </p>
-<p>Until next  month God Bless You.</p>
-<p>
-  <strong>Edith M. Stranges</strong><br>
-  <strong>Editor/Publisher</strong></p>
-</div>
-          <!-- InstanceEndEditable --> 
+<p>In Luke 19:11-28, Jesus spoke a parable  unto His disciples concerning the advantages of spiritual investments,  accountability, opportunity for service, neglect of duty, and the final outcome  of that parable, privi- leges withdrawn. Let us look at these points of  interest together and seek the wisdom of God, concerning truths contained in  this parable that relate to us as believers to&shy;day.</p>
+<p>Jesus  Christ, the Captain ofour salvation, has commissioned all of us to go into our  world (New York City) and preach the Gospel, with signs following. Jesus has  given unto us the ministry of reconciliation. He has placed within our hands  talents, gifts and opportunities of service. Are you taking advantage of each of  these special abilities that God has given to you?</p>
+<p>Today  we need for God to raise up more believers who will honestly take a good look  at the spiritual condition of the church, nation, the world, and the city we  live in. Each block, community and neighborhood should be saturated with  believers, each of us taking the opportunity of service to make a statement to  this city that our God reigns.</p>
+<p>Let  us not be among those, who make excuses for their neglect of duty as we see the  influence of drugs, aids, suicide and the increase of satanic worship reaching  deeply into many lives; our children, family and friends. We must not slack off  and be among those whose spiritual privileges are being withdrawn. As you can  plainly see, this is not time for quitting.</p>
+<p>And  while we are on the subject of quitting, I thank the Lord for the many churches  and ministries that have not quit on Unity or Reconciliation. You may ask, <strong>Why should I care about Unity?</strong> Because  it&rsquo;s close to the heart of Jesus. Division tears us apart. Division is actually  a lie.</p>
+<p>We  are at the brink of a great move of God. Let us not be hinder in anyway by our  own flesh dictating to us what is or not of God.</p>
+<p>Jonathan  Edwards, reporting of the great awakening in the 18th Century, asked a question  concerning the revival, Was this really of God? He answered with sure evidence  that the revival was truly from God. Quoting from (William De Arteaga,  Quickening The Spirit).</p>
+<p><strong>Another area of grave concern, one which  cannot be ignore is Racism. John Perkins writes &ldquo;When the time comes that the  world can look at the church and see christians of all nationalities and skin  color working together, worshipping together and loving one another, a revival  of unbelievable proportion will explode all across the land.&rdquo;</strong></p>
+<p><strong><em>The world is watching New York City,</em></strong> for whatever happens in New York City  influences the world in the areas of fashion, theater, the arts, finances,  world affairs, so it is only natural that out of this city God will flow a  mighty move of His Spirit that will affect and change the course of many lives.</p>
+<p>I&rsquo;m  excited about what God is doing this summer, street meetings, rallies,  concerts, prayer meetings and seminars. Be Blessed.</p>
+<p>Remember,  September begins our 30th year of publication.</p>
+<p align="right"><strong>Edith  M. Stranges</strong></p></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
