--- a/features.htm
+++ b/features.htm
@@ -136,41 +136,78 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/good-news-in-the-city-photo.jpg" alt="" width="132" height="85" /></div>
-                <h2>Good News In The City</h2>
-                <p><strong>Evangelist Luis Palau</strong>, whose ministry is based in Portland, Oregon, has revealed that he and his wife will  be moving temporarily to New York City ahead of a massive, and likely  historical, evangelistic and celebratory event taking place this summer at the  Big Apple's iconic Central Park  ...<a href="good-news-in-the-city.html">Read More</a>
+                <h2>The Harvest Is Ripe</h2>
+                <p>To  date, free NY City&shy;Fest festivals have been held in Harlem (May 30), Manhattan  (May 30), Flushing Mea&shy;dows (June 5), Bridgeport, CT (June 6) and Bronx (June  6), drawing tens of thousands and featuring musical performances by do&shy;zens of  notable music artists from the pop, rap, reggae, Latino, gospel and rock genres  such as  ...<a href="good-news-in-the-city2.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bobby-riedel.jpg" alt="" name="authorpic" width="81" height="85" id="authorpic" /></div>
-                <h2>Long Island Awakening <br>
-                </h2>
-                <p>The <strong>Long Island Awak</strong><strong>ening</strong> returns on <strong>June 12, 2015</strong> at the Deer Park High School 1 Falcon Place, Deer Park, New York  11729 with a <strong>7pm</strong> start time!  The Long Island Awakening has a goal of bringing the denominations together,  the different cultures and ethni&shy;cites together, and various church   ...<a href="bobby-riedel-long-island-awakening.html">Read More</a>
+                  <img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="227" height="85" id="authorpic3" /></div>
+                <h2>Collyde Summit 2015</h2>
+                <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in the NJ, NY and PA area, who love Jesus and are convicted to become  world changers. Collyde   ...<a href="collyde-summit-2015.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/shane-n-shane.jpg" width="145" height="85" alt="Shane and Shane"><img src="images/scott-cunningham.jpg" alt="" name="authorpic" width="86" height="85" id="authorpic2" /></div>
-                <h2>BridgeFest 2015</h2>
-                <p>The <strong>Bridge Christian Radio</strong> presents a  premier summer celebration with Bible Teaching Seminars by Bridge Tea&shy;chers and  activities for the whole family <strong>Bridgefest  2015, Friday-Sa&shy;tur&shy;day, June 26th &amp; 27th</strong>. <strong>Seminars</strong> start <strong>Friday</strong>, <strong>9am</strong>; <strong>Con&shy;cert</strong> starts  ...<a href="bridgefest2-2015.html">Read More</a>
+                  <a href="images/fourthofjulyusaindependencedayquotewallpaper.jpg"><img src="images/fourthofjulyusaindependencedayquotewallpaper.jpg" alt="" name="authorpic" width="130" height="85" id="authorpic5" /></a></div>
+                <h2>America&rsquo;s Day of Deliverance</h2>
+                <p>This Fourth of July Ameri&shy;ca celebrates it's 239th birthday! The Fourth of Ju&shy;ly is one of our most-celebrated holidays, a fact confirmed by a very elder&shy;ly John Quincy Adams in a speech he delivered July 4, 1837 - America's 61st birthday. John Quincy Adams properly reminded the crowd    ...<a href="americas-day-of-deliverance.html">Read More</a>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic8" /><br>
+    </div>
+                <h2>Enjoy Summer without Weight Gain</h2>
+                <p>I&nbsp;love summer! I love the hot weather, long days  of sunshine, and spending time with family and friends at BBQs, picnics and  other social events that fill my calendar during this season. However, it is  also a time when maintaining my heal&shy;thy weight can be a struggle because I am  surrounded by ...<a href="elizabethmadison-enjoy-summer-without-weight-gain.html">Read More</a><br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/donaldreid.jpg" alt="" width="63" height="85" /><br>
+    </div>
+                <h2>Summer Jobs Tax Tips!</h2>
+                <p>There are opportunities galore to give a  job or get a job with tax benefits to all parties concerned and here is how it  works: Job hunting expenses are deductible. If you're out of work, or even if you're still employed but looking for a new job, all of your job hunting expenses are deductible as miscellaneous ...<a href="donaldreid-summer-jobs-tax-tips.html">Read More</a><br>
+                </p>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-</div>
-                <h2>NY-NJ CityServe-CityFest </h2>
-                <p><strong>NY/NJ CityFest</strong> with<strong> Luis Palau</strong> is an historic, region-wide  initiative involving more than 1,200 churches and nearly 100 evangelistic  events. The vision is to give you and your church the tools you need to join  with others to share the life-changing message ofJe&shy;sus in a fresh and exciting   ...<a href="ny-nj-cityserve-cityfest.html">Read More</a>
-<div id="articlepic">
+                  <img src="images/flag.png" name="authorpic" width="138" height="85" id="authorpic4" /></div>
+                <h2>Viewpoint: AMERICA</h2>
+                <p>I pledge allegiance to the Flag of the United States of America and to the Republic for which it stands, one na&shy;tion under God, indivisible with liberty and justice for all.  Folks, do you know the pledge? Do our children know it; Do we put our hands over our hearts for the pledge; Do we still ...<a href="rose-lictro--viewpoint-america.html">Read More</a> </p>               
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/rose-edith-dad-henry-mom-genevieve-richard-and-henry-jr-.jpg" name="authorpic" width="121" height="85" id="authorpic4" /></div>
-                <h2>Viewpoint: Dads</h2>
-                <p>Mom sometimes stayed home with Henry Jr.  until he got older. Imagine going to big and small churches, storefronts, even  pastors&rsquo; homes. We were so blessed to meet so many wonderful people listening  to sermons and my Dad playing the piano and also learning how to pray together  and witness to others  ...<a href="escape-from-the-holocaust.html">Read More</a>
-<div id="articlepic">
-  <div class="photocredits2"> </div>
+                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic" /><br>
+    </div>
+                <h2>What A Day, Glorious Day, That Will Be! </h2>
+                <p>Have you ever wondered what judgment day  for us Christians will be like? After the Rapture, we <em>&ldquo;must all appear before the judgment seat of Christ.&rdquo;</em> 2 Corinthians  5:10. <strong>Knowing how we&rsquo;ll be measured in  that future day will help us live now with a view toward eternity, and fulfill  God&rsquo;s plan for our lives. </strong>Here&rsquo;s   ...<a href="jimbiscardi-what-a-day-glorious-day.html">Read More</a><br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <br>
+    </div>
+                <h2>The Five Star Man</h2>
+                <p>The Five Star Man&rdquo; is a dating handbook  written for women and discusses the hazards of dating while at the same time  examines the overall stability of today&rsquo;s man. It encouragaes women to use the  dating period as a time of investigation and not just infatuation and suggest  that choices be based on self-worth and value  ...<a href="naomi-williams--the-five-star-man.html">Read More</a><br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
                   <img src="images/central-park.jpg" alt="" height="75" /></div>
                 <h2>Vision For New York City<br>
                 </h2>
-                <p>It started with one small group of Latino  leaders and a simple invitation. They were eager to have Luis Palau and his  team help lead an evangelistic effort reaching  the Tri-State area. Within a few more ...<a href="vision-for-new-york-city.html">Read More</a>                
+                <p>It started with one small group of Latino  leaders and a simple invitation. They were eager to have Luis Palau and his  team help lead an evangelistic effort reaching  the Tri-State area. Within a few more ...<a href="vision-for-new-york-city.html">Read More</a>
+                  <br>
+                  <a href="living-victory-copeland.html"><br>
+                  </a>                
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/kenneth-and-gloria-copeland.png" alt="" name="authorpic9" width="99" height="75" id="authorpic9" /><br>
-      </div>
-                <h2>Living Victory</h2>
-                <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a></div>
+                  <img src="images/ellencomis.jpg" width="69" height="85" alt="Ellen Comis"><br>
+  </div>
+                <h2>Healing Through The Word</h2>
+                <p>In Heb.  11:1 it says, <em>&ldquo;Now faith is the <u>substance</u> of things hoped for, the <u>evidence</u> of things not seen.&rdquo;</em>&nbsp; It is the power by which things that we  desire become the things that we possess.  Faith is an intangible (indescriba&shy;ble) commodity (product or service).  You can&rsquo;t see it &ndash; touch it ...<a href="ellencomis-healing-through-the-word.html">Read More</a>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits"> </div>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
+            </div>
+                <h2>Focus On The Children: </h2>
+                <p>Hello  Beloved: Ever wonder with all the things we as believers go through, &ldquo;Where is  God&rdquo;? How did this happen? Why did this happen? When is this going to end? And  on, and on it goes. We can all speculate and we do. But God has all the  answers. I recently discovered an interesting <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+</div>
+                <h2>NY-NJ CityServe-CityFest </h2>
+                <p><strong>NY/NJ CityFest</strong> with<strong> Luis Palau</strong> is an historic, region-wide  initiative involving more than 1,200 churches and nearly 100 evangelistic  events. The vision is to give you and your church the tools you need to join  with others to share the life-changing message ofJe&shy;sus in a fresh and exciting   ...<a href="ny-nj-cityserve-cityfest.html">Read More</a></div>
             </div>
           <!--SECTION LEFT BEGIN-->
           <div id="section_left" style="float:left;"></div>
