--- a/good-news-in-the-city2.html
+++ b/good-news-in-the-city2.html
@@ -1,18 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0059)http://www.loveexpressonline.com/newsaroundthetristate.html -->
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>News Around the Tri-State</title>
+<title>The Harvest Is Ripe</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" --><style type="text/css">
-<!--
-.style1 {font-weight: bold}
--->
-</style><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -60,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">news</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -80,17 +75,21 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">News Around the Tri-State</h4>
-  <div id="authorname"></div>
-  <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun,  July 15th-19th, 7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth Delive&shy;rance COJCA</strong>, 10-13 18th Avenue, Newark,&#8200;New  Jersey 07106. Host: <strong>Dr. Beverley  Williams, Pastor</strong>. For more info call (732) 939-7556 or (973) 371-2120.    </p>
-    <p align="center" class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavorful  Crew </strong>presents <strong>Gospel &amp; Jazz</strong> with <strong>Brunch, July 11th, 2pm-6pm @ Sa&shy;lem United  Methodist Community Center</strong>, 211 West 129th Street (bet. 7th &amp; 8th Aves.),  NY, NY. Tickets: $35. Contacts: James Hall (917) 701-3005 Delores Franks (212)  862-1038 or Email us at flavorfulcrew@yahoo.com    </p>
-    <p align="center" class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s  Memorial </strong>will  celebrate Birthday Service for <strong>Overseer  Clara Williams; </strong>special guest speaker, <strong>Sunday,  July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street,  Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa"><strong><a name="a4"></a>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing  Preachers International Conference, July 28th-August 2nd</strong> hosted by <strong>Pastor Sabrina McKenzie</strong>, Director of Dancing Preachers Int&rsquo;l.  Speakers: <strong>Apostle Elizabeth Hairston</strong>, <strong>Rev. Cordelia Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue: Radisson  Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436. Facilitators:Dr.  Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter, Prophetess Marla King,  Wendell Bullen, Patricia Smargiassi, Martin Smargiassi, Dr. A&rsquo;renee Cooper,  Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes, Julinda Lewis,  Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright. Register now at  www.dancingpreachers. com or call 1-877-716-7117.</p></div></div><!-- InstanceEndEditable --> 
+            <div><img src="images/good-news-in-the-city-photo.jpg" alt="" width="598" class="full-width-image" /> </div>
+            <h4 id="articleTitle">The Harvest Is Ripe</h4>
+            <p class="qa">Over 85,000 have heard the &quot;Good News in the City&quot;</p>
+              <div id="authorname">All Roads Leading to July 11th Free Festival on the Great Lawn of Central Park
+              </div>
+              
+              <p>More than 85,000 people in the New York  Tri-State area have heard the &ldquo;Good News in the City&rdquo; as shared by Luis and  Andrew Palau at NY CityFest, NY CityServe and other related events over the  past several weeks.</p>
+              <p>To  date, free NY City&shy;Fest festivals have been held in Harlem (May 30), Manhattan  (May 30), Flushing Mea&shy;dows (June 5), Bridgeport, CT (June 6) and Bronx (June  6), drawing tens of thousands and featuring musical performances by do&shy;zens of  notable music artists from the pop, rap, reggae, Latino, gospel and rock genres  such as American Idol standout Madisa, multiple Grammy-winners For King &amp;  Country, Grammy-winning gospel star Bishop Hezekiah Walker, Grammy-nominated  gospel singer-songwriter Va&shy;Shawn Mitchell, Christian hip-hop artist and  producer Andy Mi&shy;neo, and many more. At each event, Luis and Andrew Pa&shy;lau have  shared the &ldquo;Good News in the City&rdquo; message of hope through Jesus.</p>
+              <p>In  addition to the many attending the festivals, tens of thousands have been  served by NY CityServe, an outreach that launched in NYC in September 2014,  when hundreds of leaders representing more than 1,200 churches in the NYC area  joined with local business leaders, political leaders and the Luis Palau  Association, and pledged to love and serve all of New York Ci&shy;ty. Hundreds of  events have taken place since then, and many more are planned in the upcoming  months.</p>
+              <p><b>&ldquo;There is a great gos&shy;pel movement  happening right now in New York Ci&shy;ty,&rdquo; said Luis Palau, one of the most  prominent evangelists in the world today. &ldquo;New York is probably the most  culturally diverse ci&shy;ty to have ever existed on the face of the Earth, and  everywhere we turn in the 5 boroughs and surrounding communities, the  enthusiasm for hearing the message of the gospel has been way beyond our  expectations. While recent studies may show more and more people turning away  from organized religion, I can tell you that in New York City right now, those  people are not turning away from faith in Je&shy;sus Christ.&rdquo;</b></p>
+              <p>There  are three more regional NY CityFest festivals: Long Island (June 12),  Elizabeth, NJ (June 27) and Clinton, NJ (July 5), and a special one-night-only,  free concert at Radio City Music Hall (July 7) featuring four-time Grammy  winner Third Day, five-time Dove Award-winner, Newsboys, &amp; America&rsquo;s Got  Talent finalist David Garibaldi.</p>
+              <p>Then,  on July 11th, all of the Tri-State area will come together to celebrate the  &ldquo;Good News in the City&rdquo; when NY CityFest with Luis Palau, a massive free  festival on the Great Lawn in Central Park, will bring a constellation of stars  from music, television and sports together to perform and inspire, including  Grammy-Award winning artists Mandi- sa, Toby Mac, Marcos Witt, Israel Houghton,  Matt Redman, and Hezekiah Walker, alongside celebrity speakers such as NY  Yankees standout Mariano Rivera and Latin star Myrka Dellanos. Luis Palau will  present a special address during the massive gathering, to reflect on the  city&rsquo;s diversity, as churches of all denominations and ethnic backgrounds have  come together from all five boroughs and the Tri-State area to make the  festival possible.</p>
+              <p><b><i>About Luis  Palau: Lu&shy;is Palau has personally shared the Gospel with more than 30 million  people through evangelistic events in more than 75 nations, and hundreds of  millions more through radio and television. Luis Palau festivals have produced  some of the largest audiences ever recorded in ci&shy;ties from south Florida to  South America. His ra&shy;dio broadcasts in both English and Spanish are heard by  millions on more than 5,000 radio outlets in 48 countries. He has authored close  to 50 books, contri&shy;buted articles on issues of faith to countless  publications, and counseled business leaders, political lea- ders, and heads of  state around the world.</i></b></p>
+              <p><b><i>For details on  the festival and how to attend NY CityFest events, visit www.&nbsp; NYCityFest.org.</i></b></p>
+</div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
