--- a/index.htm
+++ b/index.htm
@@ -211,9 +211,12 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                       padding-top:10px;"> </div>
                 <div class="bodytxt" style="padding:10px;
                       background-color:#e8e2d6">
+<p class="style14" style="margin: 5px 0 -3px 0; text-align:center;">Update: The Harvest Is Ripe. </p>
+<p class="featurehead" style="margin-top: 5px;">Over 85,000 have heard the  &quot;Good News in the City&quot;</p>
+<p style="margin:5px 0; text-align:center;"><strong>All Roads Leading to July 11th Free Festival on the Great Lawn of Central Park </strong></p>
+<p style="margin-top: 5px; margin-bottom: 10px;">More than 85,000 people in the New York  Tri-State area have heard the &ldquo;Good News in the City&rdquo; as shared by Luis and  Andrew Palau at NY CityFest, NY CityServe and other related events over the  past several weeks  ... <a
+                          href="good-news-in-the-city2.html">Read More</a></p>
                   <div><img style="margin:0 auto 10px auto; border-bottom:#F00 solid 4px;" src="images/good-news-in-the-city-photo2.jpg" alt=""  /></div>
-<p style="margin-top: 5px;"><strong>In  November 1979, I entered St. Vincent&rsquo;s Hospital</strong> on 14th Street in  Man- hattan for my first major knee surgery,  the first of what would eventually be a series of nine surgical procedures. I  was aware that what was ahead would not be pleasant, but knew it was necessary if I wanted to walk again. I had not  been able to walk ever since suffering a serious knee injury in March 1979  ... <a
-                          href="good-news-in-the-city.html">Read More</a></p>
                   <div style="clear:both;"></div>
                 </div>
                 <div class="divider"></div>
@@ -282,33 +285,29 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                         <div id="sec_content">
                           <div class="bodytxt">
                             <div id="articlepic">
+                              <div class="photocredits2"> </div>
+                  <img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="227" height="85" id="authorpic3" /></div>
+                <h2>Collyde Summit 2015</h2>
+                <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in the NJ, NY and PA area, who love Jesus and are convicted to become  world changers. Collyde   ...<a href="collyde-summit-2015.html">Read More</a>
+<div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bobby-riedel.jpg" alt="" name="authorpic" width="81" height="85" id="authorpic" /></div>
-                <h2>Long Island Awakening <br>
-                </h2>
-                <p>The <strong>Long Island Awak</strong><strong>ening</strong> returns on <strong>June 12, 2015</strong> at the Deer Park High School 1 Falcon Place, Deer Park, New York  11729 with a <strong>7pm</strong> start time!  The Long Island Awakening has a goal of bringing the denominations together,  the different cultures and ethni&shy;cites together   ...<a href="bobby-riedel-long-island-awakening.html">Read More</a>
-                  <br>
-                  <br>
-                                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/shane-n-shane.jpg" width="145" height="85" alt="Shane and Shane"><img src="images/scott-cunningham.jpg" alt="" name="authorpic" width="86" height="85" id="authorpic2" /></div>
-                <h2>BridgeFest 2015</h2>
-                <p>The <strong>Bridge Christian Radio</strong> presents a  premier summer celebration with Bible Teaching Seminars by Bridge Tea&shy;chers and  activities for the whole   ...<a href="bridgefest2-2015.html">Read More</a>
-                  <br>
-                  <br>
-                                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-</div>
-                <h2>NY-NJ CityServe-CityFest </h2>
-                <p><strong>NY/NJ CityFest</strong> with<strong> Luis Palau</strong> is an historic, region-wide  initiative involving more than 1,200 churches and nearly 100 evangelistic  events. The vision is to give you and your church the tools you need to join  with others to share the life-changing message ofJe&shy;sus in a fresh and exciting   ...<a href="ny-nj-cityserve-cityfest.html">Read More</a>
-                  <br>
-                  <br>
+                  <a href="images/fourthofjulyusaindependencedayquotewallpaper.jpg"><img src="images/fourthofjulyusaindependencedayquotewallpaper.jpg" alt="" name="authorpic" width="130" height="85" id="authorpic5" /></a></div>
+                <h2>America&rsquo;s Day of Deliverance</h2>
+                <p>This Fourth of July Ameri&shy;ca celebrates it's 239th birthday! The Fourth of Ju&shy;ly is one of our most-celebrated holidays, a fact confirmed by a very elder&shy;ly John Quincy Adams in a speech he delivered July 4, 1837 - America's 61st birthday. John Quincy Adams properly reminded the crowd    ...<a href="americas-day-of-deliverance.html">Read More</a>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/rose-edith-dad-henry-mom-genevieve-richard-and-henry-jr-.jpg" name="authorpic" width="121" height="85" id="authorpic4" /></div>
-                <h2>Viewpoint: Dads</h2>
-                <p>Mom sometimes stayed home with Henry Jr.  until he got older. Imagine going to big and small churches, storefronts, even  pastors&rsquo; homes. We were so blessed to meet so many wonderful people listening  to sermons and my Dad playing the piano and also learning how to pray together  and witness to others  ...<a href="escape-from-the-holocaust.html">Read More</a>
-<h4 id="articleTitle"><a
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic8" /><br>
+    </div>
+                <h2>Enjoy Summer without Weight Gain</h2>
+                <p>I&nbsp;love summer! I love the hot weather, long days  of sunshine, and spending time with family and friends at BBQs, picnics and  other social events that fill my calendar during this season. However, it is  also a time when maintaining my heal&shy;thy weight can be a struggle because I am  surrounded by ...<a href="elizabethmadison-enjoy-summer-without-weight-gain.html">Read More</a><br>
+<br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/flag.png" width="138" height="85" id="authorpic4" /></div>
+                <h2>Viewpoint: AMERICA</h2>
+                <p>I pledge allegiance to the Flag of the United States of America and to the Republic for which it stands, one na&shy;tion under God, indivisible with liberty and justice for all.  Folks, do you know the pledge? Do our children know it; Do we put our hands over our hearts for the pledge; Do we still ...<a href="rose-lictro--viewpoint-america.html">Read More</a></p>                
+                <h4 id="articleTitle"><a
                                     href="features.htm">More Features
                               &gt;&gt; </a></h4>
                           </div>
@@ -324,15 +323,12 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                   <div style="text-align:center;"></div>
                   <hr style="">
                   <div class="editordesk">
-                    <h4 id="articleTitle">Editor's desk: Edith stranges</h4>
-                    <p><b><i></i></b>This will be a great summer. Truly the harvest is  ripe and the chur&shy;ches are ready for the overflow. God is looking for a new generation, a new breed of people who are  totally sold out to the eternal purpo&shy;ses of the Kingdom of God ... <a
-                            href="edithstranges-editorial-we-are-all-mothers.html">Read More</a></p>
+                    <h4 id="articleTitle">Editor's desk: Loving One!</h4>
+                    <p><b><i></i></b>In Luke 19:11-28, Jesus spoke a parable  unto His disciples concerning the advantages of spiritual investments,  accountability, opportunity for service, neglect of duty, and the final outcome  of that parable, privi- leges withdrawn. Let us look at these points of  interest together and seek the wisdom of God, concerning truths contained in  this parable that relate to us as believers to&shy;day ... <a
+                            href="edithstranges-editorial.html">Read More</a></p>
                   </div>
                   <hr style="">
-                  <div style="text-align: center;"><a onClick="MM_openBrWindow('ads/cityfest-ny.html','','scrollbars=yes,width=918,height=750'); return false" href="#"><img
-                        src="ads/ny-cityfest-banner.jpg"
-                        alt="Good News in the City, NY CITYFEST" width="468"
-                        height="60" ></a></div>
+                  <div style="text-align: center;"></div>
                   <hr style="">
                   <div id="sectionbox">
                     <div id="sec_lable">
@@ -347,41 +343,43 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                       <div id="sec_content_bdrright">
                         <div id="sec_content">
                           <div class="bodytxt">
-                            <div id="articlepic">
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic2" /><br>
-    </div>
-                <h2>Men:Time to Focus on Your Health!</h2>
-                <p>85% of my  clients are women. Why so few men? Some key reasons. First, women are better at  prioritizing their health. When I reach out to men to talk about their health,  I get the following responses: they're too busy', have other things to focus  on', or generally feel that they are<strong> </strong>...<a href="elizabethmadison-mentime-to-focus-on-your-health.html">Read More</a>
+                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/mens-discipleship-boot-camp.jpg" alt="" name="authorpic" width="128" height="85" id="authorpic7" /></a><br>
+  </div>
+                <h2>Men's Discipleship Boot Camp</h2>
+                <p>Saturday, May 30, 2015, crowds of men  gathered to attend MDN&rsquo;s Discipleship Boot Camp, &ldquo;The Man God Blesses&rdquo; at the  Christian Cultural Center. Dynamic leaders, Dr. A. R. Bernard and Dr. David  Ireland joined MDN Men&rsquo;s Pastor, Scott Caesar as keynote speakers for the one  day conference  ...<a href="mens-discipleship-boot-camp.html">Read More</a><br>
+                </p>
+              
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/johnhagee2.jpg" alt="John Hagee " width="67" height="85"><img src="images/creflodollar.jpg" alt="Creflo Dollar" width="62" height="85" style=""></div>
+                <h2>New York Camp Meeting 2015<br>
+                </h2>
+                <p>Join <strong>Creflo Dollar as he hosts NYCamp Meeting 2015, Tues&shy;day-Friday, July 14th-17th,  7pm nightly</strong> with <strong>John Hagee, David  T. Demola and Andrew Wommack</strong> @ <strong>World  Changers Church-NY(Loew&rsquo;s Paradise Thea&shy;&shy;ter)</strong>, 2417 Grand Con&shy;course,  Bronx, New York 10468. Faith. Power and Grace   ...<a href="nycampmeeting-2015.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/kenneth-and-gloria-copeland.png" alt="" name="authorpic9" width="99" height="75" id="authorpic9" /><br>
+      </div>
+                <h2>Living Victory</h2>
+                <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a>
                   <br>
                   <br>
                 </p>
-                <div id="articlepic">
-                  <div class="photocredits"> </div>
-                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
-              </div>
-                <h2>Focus On The Children: </h2>
-                <p>Hello  Beloved: Ever wonder with all the things we as believers go through, &ldquo;Where is  God&rdquo;? How did this happen? Why did this happen? When is this going to end? And  on, and on it goes. We can all speculate and we do. But God has all the  answers. I recently discovered an  <strong> </strong>...<a href="focuson.html">Read More<br>
-                  <br>
-                </a>                </p>
+              
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/matthew-singh-revival-photo.jpg" alt="" name="authorpic" width="60" height="85" id="authorpic6" /><br>
-  </div>
-                <h2>The Discipleship Factor </h2>
-                <p>When Jesus says, &ldquo;Come follow me&rdquo;, He is  not referring to some well- thought out church program or event, He means come  follow him, come walk with him, come establish a relationship with him, come be  his disciple. Discipleship is all about the <strong><em>relationship</em></strong>.<strong> It is </strong><strong> </strong>...<a href="matthew-singh-the-discipleship-factor.html">Read More</a><br>
-                  <br>
+                  <img src="images/dmcclurkin..jpg" alt="" name="authorpic" width="76" height="85" id="authorpic10" /><br>
+    </div>
+                <h2>Church Without Walls</h2>
+                <p>Celebrate with Pastor Donnie McClurkin &amp; Perfecting Faith Church - Church Without Walls; No Pews, No Suits, No Ties - <strong>Every Sunday July 5th, 12th, 19th, 26th; August 2nd, 9th, 16th &amp; 30th at 3pm.</strong> Surprise Guest Artists, Giveaways, Health Fair: Blood Pres&shy;sure Screenings &amp; Diabe&shy;tes Screenings and  ...<a href="donnie-mcclurkin-church-without-walls.html">Read More</a><br>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/six-flags-great-adventure-2015 - Copy.jpg" alt="" width="270" height="85" /><br>
-  </div>
+    </div>
                 <h2>Six Flags, Star 991fm, Wlib 1190 Concerts</h2>
                 <p><strong>Get Ready for an Uplifting  Adventure.</strong><strong> </strong><strong>June 20th-Praise  in the </strong><strong>Park featuring Israel &amp; New Breed.</strong> Opening artist Karen Clarke Sheard, sponsored by WLIB ...<a href="six-flags-star-991fm-wlib-1190-concerts.html">Read More</a>                </p>
-                            <div id="articlepic">
-                              <div class="photocredits2"> </div>
-                              <br>
-                            </div>
                             <h4 id="articleTitle"><a
                                     href="events.html">More Events
                               &gt;&gt; </a></h4>
@@ -417,12 +415,15 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                             <div class="leftcol">
                               <ol>
                                 <li><a
-                                        href="newsaroundthetristate.html#a1">Night of Worship</a></li>
+                                        href="newsaroundthetristate.html#a1"><strong>Holy Convocation</strong></a></li>
                                 <li><a
-                                        href="newsaroundthetristate.html#a2"><span class="qa"><b>Don&rsquo;t Walk By Campaign</b></span></a></li>
+                                        href="newsaroundthetristate.html#a2"><strong>Gospel/Jazz Brunch</strong></a></li>
                                 <li><a
-                                        href="newsaroundthetristate.html#a3"><b>NY Campmeetings</b></a><a
+                                        href="newsaroundthetristate.html#a3"><strong>Monk&rsquo;s Memorial</strong></a><a
                                         href="newsaroundthetristate.html#a3"></a></li>
+                                <li><a
+                                        href="newsaroundthetristate.html#a3"><strong>Int&rsquo;l Conference</strong></a><a
+                                        href="newsaroundthetristate.html#a4"></a></li>
                               </ol>
                             </div>
                             <h4 id="articleTitle"><a
@@ -483,7 +484,7 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                         alt="Blue Box Entertainment" width="468"
                         height="60" ></a></div>
                   <hr style="">
-                  <div id="sectionbox">
+                  <div id="sectionbox" style="display:none;">
                     <div id="sec_lable">
                       <div id="sec_lableleft"></div>
                       <div id="sec_lablectr">
