--- a/naomi-williams--the-five-star-man.html
+++ b/naomi-williams--the-five-star-man.html
@@ -1,18 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0059)http://www.loveexpressonline.com/newsaroundthetristate.html -->
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>News Around the Tri-State</title>
+<title>T. Naomi Williams: The Five Star Man</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" --><style type="text/css">
-<!--
-.style1 {font-weight: bold}
--->
-</style><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -60,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">news</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -80,17 +75,25 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">News Around the Tri-State</h4>
-  <div id="authorname"></div>
-  <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun,  July 15th-19th, 7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth Delive&shy;rance COJCA</strong>, 10-13 18th Avenue, Newark,&#8200;New  Jersey 07106. Host: <strong>Dr. Beverley  Williams, Pastor</strong>. For more info call (732) 939-7556 or (973) 371-2120.    </p>
-    <p align="center" class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavorful  Crew </strong>presents <strong>Gospel &amp; Jazz</strong> with <strong>Brunch, July 11th, 2pm-6pm @ Sa&shy;lem United  Methodist Community Center</strong>, 211 West 129th Street (bet. 7th &amp; 8th Aves.),  NY, NY. Tickets: $35. Contacts: James Hall (917) 701-3005 Delores Franks (212)  862-1038 or Email us at flavorfulcrew@yahoo.com    </p>
-    <p align="center" class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s  Memorial </strong>will  celebrate Birthday Service for <strong>Overseer  Clara Williams; </strong>special guest speaker, <strong>Sunday,  July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street,  Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa"><strong><a name="a4"></a>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing  Preachers International Conference, July 28th-August 2nd</strong> hosted by <strong>Pastor Sabrina McKenzie</strong>, Director of Dancing Preachers Int&rsquo;l.  Speakers: <strong>Apostle Elizabeth Hairston</strong>, <strong>Rev. Cordelia Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue: Radisson  Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436. Facilitators:Dr.  Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter, Prophetess Marla King,  Wendell Bullen, Patricia Smargiassi, Martin Smargiassi, Dr. A&rsquo;renee Cooper,  Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes, Julinda Lewis,  Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright. Register now at  www.dancingpreachers. com or call 1-877-716-7117.</p></div></div><!-- InstanceEndEditable --> 
+            <div id="articlepic"></div>
+            <h4 id="articleTitle">The Five Star Man</h4>
+              <div id="authorname">by: T. Naomi Williams
+                <!--SECTION LEFT END-->
+                <br>
+                <strong><em>Released on Wednesday, April 8, 2015.</em></strong>              </div>
+              <p align="center"></p>
+              
+              <p>The Five Star Man&rdquo; is a dating handbook  written for women and discusses the hazards of dating while at the same time  examines the overall stability of today&rsquo;s man. It encouragaes women to use the  dating period as a time of investigation and not just infatuation and suggest  that choices be based on self-worth and value rahtaer than on pure attraction  and desire.</p>
+              <p>Unlike  so many other books on this topic &ldquo;The Five Star Man,&rdquo; does not instruct women  in the method of getting and keeping a man, instead it focuses on men and  discusses some of the reasons many are not suitable for dating and marriage.</p>
+              <p>While  dating is not a biblical practice it must nevertheless be practiced sensibly  &amp; responsibly.</p>
+              <p>To  assist women in the evaluation process &ldquo;The Five Star Man&rdquo; reveals (5) major  areas of stabillity and uses a rating system to determine eligibility. This  rating system has proven to be very effective by those who have used it.</p>
+              <p>The  primary goal of this book is to give women a new sense of direction, purpose,  and self worth, while equipping them with the tools needed to identify the man  who is truly deserving.</p>
+              <p>Published  by High Bridge Books, the book is available through bookstores nationwide, from  the publisher at <strong><em>www.Highbridgebooks. com, </em></strong>or by visiting <strong>barnes andnoble.com</strong> or <strong>amazon.com</strong>.</p>
+              <p>For  more information visit <strong><em>thefivestarman.com</em></strong> For promotional  inquiries, please contact Darren Shea&shy;rer, Publisher &amp; Marketing  Representative, at darrenshearer@highbridgebooks. com. </p>
+              <p align="center"><strong>T.  Naomi Williams, </strong><strong>Author  &amp; Dating Coach.</strong>              </p>
+</div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
