--- a/rose-lictro--viewpoint-america.html
+++ b/rose-lictro--viewpoint-america.html
@@ -1,18 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0059)http://www.loveexpressonline.com/newsaroundthetristate.html -->
-
-<html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html><!-- InstanceBegin template="/Templates/article_features.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>News Around the Tri-State</title>
+<title>Welcome to the Love Express</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" --><style type="text/css">
-<!--
-.style1 {font-weight: bold}
--->
-</style><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -60,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">news</p>
+        <p class="pageheadertxt">Features</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -78,19 +73,57 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <div id="gui_borderleft"> 
           <div id="gui_borderright"> 
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
-        <!--SECTION LEFT BEGIN-->
+               <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">News Around the Tri-State</h4>
-  <div id="authorname"></div>
-  <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun,  July 15th-19th, 7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth Delive&shy;rance COJCA</strong>, 10-13 18th Avenue, Newark,&#8200;New  Jersey 07106. Host: <strong>Dr. Beverley  Williams, Pastor</strong>. For more info call (732) 939-7556 or (973) 371-2120.    </p>
-    <p align="center" class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavorful  Crew </strong>presents <strong>Gospel &amp; Jazz</strong> with <strong>Brunch, July 11th, 2pm-6pm @ Sa&shy;lem United  Methodist Community Center</strong>, 211 West 129th Street (bet. 7th &amp; 8th Aves.),  NY, NY. Tickets: $35. Contacts: James Hall (917) 701-3005 Delores Franks (212)  862-1038 or Email us at flavorfulcrew@yahoo.com    </p>
-    <p align="center" class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s  Memorial </strong>will  celebrate Birthday Service for <strong>Overseer  Clara Williams; </strong>special guest speaker, <strong>Sunday,  July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street,  Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa"><strong><a name="a4"></a>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing  Preachers International Conference, July 28th-August 2nd</strong> hosted by <strong>Pastor Sabrina McKenzie</strong>, Director of Dancing Preachers Int&rsquo;l.  Speakers: <strong>Apostle Elizabeth Hairston</strong>, <strong>Rev. Cordelia Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue: Radisson  Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436. Facilitators:Dr.  Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter, Prophetess Marla King,  Wendell Bullen, Patricia Smargiassi, Martin Smargiassi, Dr. A&rsquo;renee Cooper,  Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes, Julinda Lewis,  Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright. Register now at  www.dancingpreachers. com or call 1-877-716-7117.</p></div></div><!-- InstanceEndEditable --> 
+            <div id="articlepic"><img src="images/naomi-rose-lictro.jpg" name="authorpic" width="175" id="authorpic" /> </div>
+            <h4 id="articleTitle">Viewpoint: AMERICA</h4>
+              <div id="authorname"><!--SECTION LEFT END--><strong>By Rose Acker Lictro </strong><strong> </strong></div>
+              <p align="center" class="qa"><strong>THE PLEDGE</strong><strong> </strong></p>
+              <p><em>I  pledge allegiance to the Flag of the United States of America and to the  Republic for which it stands, one na&shy;tion under God, indivisible with liberty  and justice for all.</em>              </p>
+              
+              <p>Folks, do you know the pledge? Do our  children know it; Do we put our hands over our hearts for the pledge; Do we  still salute when the flag passes by at a parade?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Al&shy;ways keep this in mind.</p>
+              <p>People  of America, when are we going to get serious about our nation and for those who  gave their lives for our liberty and freedoms. Where are we as the &ldquo;most  outstanding Free Nation in this world.&rdquo; Every American citizen, please let us  take back what we so freely give away and hold it close to us! Our honor, our truths,  our lives, jobs, homes, religions, and start speaking Right about America, USA.  Start waving the flags on our homes, stores, parks, everywhere; be proud. I  be&shy;lieve in America and I be&shy;lieve in the good work we Americans do every day.  I love my country, America. Do you love her?</p>
+              <p>I  was born August 3rd, 1939, World War II baby and I know what it felt like at  the age of 4 to cover our windows at night with sheets, the coupon book for the  bread lines, civil defense drills in schools, loved going to so many parades  for soldiers coming home, visiting the great ships in New York harbors,  listening to Bob Hope &amp; the USO on the ra&shy;dio; My uncles going to war and  most of all, people praying for our nation and every adult and child carrying  their Bibles. </p>
+              <p class="qa"><strong>THE FLAGS</strong></p>
+              <p>I&rsquo;m overwhelmed with gratitude for our  Country our Flags and for the Sacrifice of Heroes who put their Lives on the  Line to Defend our great Nation, our Family&rsquo;s Life and Liberty. America Thank  You! I&rsquo;m Proud to Fly Flags on my Home. FYF              </p>
+              <p class="qa"><strong>THE SONGS</strong></p>
+              <p align="center"><strong>American Favorites:</strong></p>
+              <p align="center">God Bless America</p>
+              <p align="center">Star Spangled Banner</p>
+              <p align="center">America the Beautiful</p>
+              <p align="center">My CountryTis of Thee</p>
+              <p align="center">Hail to the Chief</p>
+              <p align="center">America the Proud Taps</p>
+              <p align="center">Over There</p>
+              <p align="center">Look Away</p>
+              <p align="center">Battle Hymn of the Republic</p>
+              <p align="center">His Truth is Marching On</p>
+              <p align="center">Home on the Range</p>
+              <p align="center">&ldquo;When Johnny Comes</p>
+              <p align="center">Marching Home&rdquo;</p>
+              <p align="center">Home Sweet Home</p>
+              <p align="center">Yankee Doodle</p>
+              <p align="center">&ldquo;In the Good </p>
+              <p align="center">Old Summertime&rdquo;</p>
+              <p align="center">Yellow Rose of Texas Dixie</p>
+              <p align="center">&ldquo;When the Saints come Marching HOme&rdquo;</p>
+              <p align="center">Down by the Riverside</p>
+              <p align="center">My Old Kentucky Home</p>
+              <p align="center">Oh Do Da Day </p>
+              <p align="center">and Amazing Grace.</p>
+              <p align="center">PS: If you don&rsquo;t know these songs, call  Rose up and I will be honored to sing a couple of song verses to you all</p>
+              <p align="center">(Pray for my voice.)              </p>
+              <p class="qa"><strong>THE  PRAYERS</strong></p>
+              <p>Heavenly Father; you are the foundation  of nations, Raising them up to serve and care for Your people. Send forth your  Spirit, O Lord, and make this Nation a source of Wisdom and Strength, Justice  and Integrity, so that we may know your Peace for all generations. Amen              </p>
+              <p class="qa"> <strong>THE  BIRTHDAYS</strong></p>
+              <p>God Bless America&rsquo;s 239th Birthday on  July 4th.</p>
+              <p>Happy 74th Birthday to </p>
+              <p>Sister Edith on July 8th also Happy  43rd Birthday to my daughter, Dawn Marie on July 23rd.              </p>
+              <p class="qa"><strong>THE  FIREWORKS</strong></p>
+              <p>Be careful with fireworks</p>
+              <p>and barbecuing. </p>
+              <p>Enjoy the Day. </p>
+              <p>God Bless from my heart. Rose</p></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
