--- a/donnie-mcclurkin-church-without-walls.html
+++ b/donnie-mcclurkin-church-without-walls.html
@@ -1,18 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0059)http://www.loveexpressonline.com/newsaroundthetristate.html -->
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>News Around the Tri-State</title>
+<title>Donnie McClurking: Church Without Walls</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" --><style type="text/css">
-<!--
-.style1 {font-weight: bold}
--->
-</style><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -60,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">news</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -80,17 +75,16 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">News Around the Tri-State</h4>
-  <div id="authorname"></div>
-  <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun,  July 15th-19th, 7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth Delive&shy;rance COJCA</strong>, 10-13 18th Avenue, Newark,&#8200;New  Jersey 07106. Host: <strong>Dr. Beverley  Williams, Pastor</strong>. For more info call (732) 939-7556 or (973) 371-2120.    </p>
-    <p align="center" class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavorful  Crew </strong>presents <strong>Gospel &amp; Jazz</strong> with <strong>Brunch, July 11th, 2pm-6pm @ Sa&shy;lem United  Methodist Community Center</strong>, 211 West 129th Street (bet. 7th &amp; 8th Aves.),  NY, NY. Tickets: $35. Contacts: James Hall (917) 701-3005 Delores Franks (212)  862-1038 or Email us at flavorfulcrew@yahoo.com    </p>
-    <p align="center" class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s  Memorial </strong>will  celebrate Birthday Service for <strong>Overseer  Clara Williams; </strong>special guest speaker, <strong>Sunday,  July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street,  Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa"><strong><a name="a4"></a>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing  Preachers International Conference, July 28th-August 2nd</strong> hosted by <strong>Pastor Sabrina McKenzie</strong>, Director of Dancing Preachers Int&rsquo;l.  Speakers: <strong>Apostle Elizabeth Hairston</strong>, <strong>Rev. Cordelia Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue: Radisson  Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436. Facilitators:Dr.  Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter, Prophetess Marla King,  Wendell Bullen, Patricia Smargiassi, Martin Smargiassi, Dr. A&rsquo;renee Cooper,  Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes, Julinda Lewis,  Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright. Register now at  www.dancingpreachers. com or call 1-877-716-7117.</p></div></div><!-- InstanceEndEditable --> 
+            <div id="articlepic"><img src="images/dmcclurkin..jpg" alt="" name="authorpic" width="174" height="200" id="authorpic" /> </div>
+            <h4 id="articleTitle">Church Without Walls</h4>
+              <div id="authorname">Pastor Donnie McClurkin
+                <!--SECTION LEFT END-->
+ </div>
+              <p >Celebrate with Pastor Donnie McClurkin &amp; Perfecting Faith Church - Church Without Walls; No Pews, No Suits, No Ties - <strong>Every Sunday July 5th, 12th, 19th, 26th; August 2nd, 9th, 16th &amp; 30th at 3pm.</strong> Surprise Guest Artists, Giveaways, Health Fair: Blood Pres&shy;sure Screenings &amp; Diabe&shy;tes Screenings and much more! Venue:<strong>Western Beef Parking Lot, 332 Nassau Road, Roosevelt, Long Is&shy;land</strong> (Corner of Nassau Road &amp; Babylon Turn&shy;pike).</p>
+              <p >                For more information call (516)223-8300 or visit www.perfectingfaith.org. All are Welcome.</p>
+              </div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
