--- a/nycampmeeting-2015.html
+++ b/nycampmeeting-2015.html
@@ -1,18 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0059)http://www.loveexpressonline.com/newsaroundthetristate.html -->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0051)http://www.loveexpressonline.com/nycampmeeting.html -->
 
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>News Around the Tri-State</title>
+<title>New York Camp Meeting</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" --><style type="text/css">
-<!--
-.style1 {font-weight: bold}
--->
-</style><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -60,7 +56,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">news</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -80,17 +76,19 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">News Around the Tri-State</h4>
-  <div id="authorname"></div>
-  <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun,  July 15th-19th, 7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth Delive&shy;rance COJCA</strong>, 10-13 18th Avenue, Newark,&#8200;New  Jersey 07106. Host: <strong>Dr. Beverley  Williams, Pastor</strong>. For more info call (732) 939-7556 or (973) 371-2120.    </p>
-    <p align="center" class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavorful  Crew </strong>presents <strong>Gospel &amp; Jazz</strong> with <strong>Brunch, July 11th, 2pm-6pm @ Sa&shy;lem United  Methodist Community Center</strong>, 211 West 129th Street (bet. 7th &amp; 8th Aves.),  NY, NY. Tickets: $35. Contacts: James Hall (917) 701-3005 Delores Franks (212)  862-1038 or Email us at flavorfulcrew@yahoo.com    </p>
-    <p align="center" class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s  Memorial </strong>will  celebrate Birthday Service for <strong>Overseer  Clara Williams; </strong>special guest speaker, <strong>Sunday,  July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street,  Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa"><strong><a name="a4"></a>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing  Preachers International Conference, July 28th-August 2nd</strong> hosted by <strong>Pastor Sabrina McKenzie</strong>, Director of Dancing Preachers Int&rsquo;l.  Speakers: <strong>Apostle Elizabeth Hairston</strong>, <strong>Rev. Cordelia Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue: Radisson  Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436. Facilitators:Dr.  Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter, Prophetess Marla King,  Wendell Bullen, Patricia Smargiassi, Martin Smargiassi, Dr. A&rsquo;renee Cooper,  Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes, Julinda Lewis,  Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright. Register now at  www.dancingpreachers. com or call 1-877-716-7117.</p></div></div><!-- InstanceEndEditable --> 
+            <div class="">
+              <img src="images/creflodollar.jpg" alt="Creflo Dollar" width="114" height="158" style=""><img src="images/johnhagee2.jpg" alt="John Hagee " width="123" height="158"><img src="images/davedemolajpg.jpg" alt="David T. Demola" width="160" height="158"><img src="images/andrewwommackphoto.jpg" alt="Andrew Wommack" width="158" height="158">
+            </div>
+            <h4 id="articleTitle">New York Camp Meeting 2015<br>
+            </h4>
+            <div id="authorname">
+              
+              <!--SECTION LEFT END-->
+                Creflo Dollar, 	          John Hagee,                David T. Demola,           Andrew Wommack</div>
+              
+              <p>Join <strong>Creflo Dollar as he hosts NYCamp Meeting 2015, Tues&shy;day-Friday, July 14th-17th,  7pm nightly</strong> with <strong>John Hagee, David  T. Demola and Andrew Wommack</strong> @ <strong>World  Changers Church-NY(Loew&rsquo;s Paradise Thea&shy;&shy;ter)</strong>, 2417 Grand Con&shy;course,  Bronx, New York 10468. Faith. Power and Grace.</p>
+              <p>At <strong>World Changers Church-NewYork</strong>, we  want to assist you in reaching your divine destiny. We're here to share the  truths found in God's Word. Sim&shy;plicity and understanding make the  difference.All Seats are Free!</p>
+              <p><strong><em>For additional  information or to register visit us creflodollarministries. org.</em></strong></p></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
